--- a/diagramscene.qrc
+++ b/diagramscene.qrc
@@ -9,6 +9,8 @@
     <file>images/floodfill.png</file>
     <file>images/bringtofront.png</file>
     <file>images/delete.png</file>
+    <file>images/expand.png</file>
+    <file>images/collapse.png</file>
     <file>images/sendtoback.png</file>
     <file>images/linecolor.png</file>
     <file>images/background1.png</file>
