serializing the drawn ASM to our data structure

--- a/diagramscene.qrc
+++ b/diagramscene.qrc
@@ -10,7 +10,9 @@
     <file>images/bringtofront.png</file>
     <file>images/delete.png</file>
     <file>images/expand.png</file>
+    <file>images/comment.png</file>
     <file>images/collapse.png</file>
+    <file>images/play.png</file>
     <file>images/sendtoback.png</file>
     <file>images/linecolor.png</file>
     <file>images/background1.png</file>
